force-app/main/default/objects/Photo__c/Photo__c.object-meta.xml
<CustomObject>
    <description>Object responsible for storing photos in Salesforce</description>
    <label>Photo</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Photo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Photos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>