force-app/main/default/objects/Photo__c/fields/AlbumId__c.field-meta.xml
<CustomField>
    <fullName>AlbumId__c</fullName>
    <label>Album Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>