force-app/main/default/objects/Photo__c/fields/ThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>ThumbnailURL__c</fullName>
    <label>Thumbnail URL</label>
    <type>Url</type>
</CustomField>